 - Full test coverage of the Core API.
 - Fixed around to handle return values.
 - Fixes o.extend to properly inherit the parent's prototype
   instead of merging it with the child's.

0.0.1 : 2013-03-10
 - First release!
